--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
 		"algoliasearch": "^4.12.2",
 		"cleave.js": "^1.6.0",
 		"fuse.js": "^6.5.3",
-		"i18next": "^21.6.12",
-		"i18next-browser-languagedetector": "^6.1.3",
-		"m3o": "^1.0.1390",
+		"m3o": "^1.0.1401",
 		"nprogress": "^0.2.0",
 		"qs": "^6.10.3",
 		"react": "^17.0.2",
@@ -43,9 +41,9 @@
 		"remix": "^1.2.3",
 		"remix-auth": "^3.2.1",
 		"remix-auth-form": "^1.1.1",
-		"remix-i18next": "^3.0.0",
 		"tiny-invariant": "^1.2.0",
-		"validator": "^13.7.0"
+		"validator": "^13.7.0",
+		"webfontloader": "^1.6.28"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^1.2.3",
@@ -54,9 +52,10 @@
 		"@types/nprogress": "^0.2.0",
 		"@types/qs": "^6.9.7",
 		"@types/react": "^17.0.39",
-		"@types/react-dom": "^17.0.12",
+		"@types/react-dom": "^17.0.13",
 		"@types/react-instantsearch-dom": "^6.12.2",
 		"@types/validator": "^13.7.1",
+		"@types/webfontloader": "^1.6.34",
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
 		"@typescript-eslint/parser": "^5.13.0",
 		"autoprefixer": "^10.4.2",
@@ -64,10 +63,10 @@
 		"cssnano": "^5.1.0",
 		"dotenv": "^16.0.0",
 		"eslint": "^8.10.0",
-		"eslint-config-prettier": "^8.4.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-react": "^7.29.2",
+		"eslint-plugin-react": "^7.29.3",
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"json-server": "^0.17.0",
 		"postcss": "^8.4.7",
