Avanço nas traduções, mas ainda não foram completas; otimizações nas imagens e outras mudanças

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,11 @@
 		"plugin:jsx-a11y/recommended",
 		"prettier"
 	],
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	},
 	"env": {
 		"browser": true,
 		"es6": true
