--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ifal-exames",
 	"description": "Releitura do website de exames do IFAL.",
-	"version": "1.0.1",
+	"version": "1.1.2",
 	"author": "Gepetojj <contato.gepetojj@gmail.com>",
 	"license": "MIT",
 	"private": true,
@@ -24,58 +24,65 @@
 	},
 	"sideEffects": false,
 	"dependencies": {
-		"@remix-run/react": "^1.2.3",
-		"@remix-run/serve": "^1.2.3",
-		"@remix-run/vercel": "^1.2.3",
-		"algoliasearch": "^4.12.2",
+		"@remix-run/react": "^1.3.3",
+		"@remix-run/serve": "^1.3.3",
+		"@remix-run/vercel": "^1.3.3",
+		"algoliasearch": "^4.13.0",
 		"cleave.js": "^1.6.0",
+		"crypto-js": "^4.1.1",
 		"fuse.js": "^6.5.3",
-		"m3o": "^1.0.1401",
+		"i18next": "^21.6.14",
+		"i18next-browser-languagedetector": "^6.1.4",
+		"m3o": "^1.0.1517",
 		"nprogress": "^0.2.0",
 		"qs": "^6.10.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-i18next": "^11.15.5",
+		"react-i18next": "^11.16.2",
 		"react-icons": "^4.3.1",
-		"react-instantsearch-dom": "^6.22.0",
-		"remix": "^1.2.3",
+		"react-instantsearch-dom": "^6.23.0",
+		"remix": "^1.3.3",
 		"remix-auth": "^3.2.1",
 		"remix-auth-form": "^1.1.1",
+		"remix-i18next": "^3.0.0",
 		"tiny-invariant": "^1.2.0",
+		"uuid": "^8.3.2",
 		"validator": "^13.7.0",
 		"webfontloader": "^1.6.28"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "^1.2.3",
+		"@remix-run/dev": "^1.3.3",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
 		"@types/cleave.js": "^1.4.6",
+		"@types/crypto-js": "^4.1.1",
 		"@types/nprogress": "^0.2.0",
 		"@types/qs": "^6.9.7",
-		"@types/react": "^17.0.39",
-		"@types/react-dom": "^17.0.13",
+		"@types/react": "^17.0.43",
+		"@types/react-dom": "^17.0.14",
 		"@types/react-instantsearch-dom": "^6.12.2",
-		"@types/validator": "^13.7.1",
+		"@types/uuid": "^8.3.4",
+		"@types/validator": "^13.7.2",
 		"@types/webfontloader": "^1.6.34",
-		"@typescript-eslint/eslint-plugin": "^5.13.0",
-		"@typescript-eslint/parser": "^5.13.0",
-		"autoprefixer": "^10.4.2",
+		"@typescript-eslint/eslint-plugin": "^5.17.0",
+		"@typescript-eslint/parser": "^5.17.0",
+		"autoprefixer": "^10.4.4",
 		"concurrently": "^7.0.0",
-		"cssnano": "^5.1.0",
+		"cssnano": "^5.1.5",
 		"dotenv": "^16.0.0",
-		"eslint": "^8.10.0",
+		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-react": "^7.29.3",
+		"eslint-plugin-react": "^7.29.4",
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"json-server": "^0.17.0",
-		"postcss": "^8.4.7",
+		"postcss": "^8.4.12",
 		"postcss-cli": "^9.1.0",
-		"prettier": "^2.5.1",
+		"prettier": "^2.6.1",
 		"prettier-plugin-tailwindcss": "^0.1.8",
 		"tailwindcss": "^3.0.23",
 		"tailwindcss-scrollbar": "^0.1.0",
-		"typescript": "^4.6.2",
-		"yarn-upgrade-all": "^0.6.1"
+		"typescript": "^4.6.3",
+		"yarn-upgrade-all": "^0.7.0"
 	}
 }
