Alteração no sistema de login e registro; remoção da m3o e adição do firebase; alterações nas entidades exam, session e user; menores mudanças

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-M3O_TOKEN=""
+FIREBASE_CERT=""
 SESSION_TOKEN=""
 CRYPTO_SALT=""
 
 PUBLIC_ALGOLIA_APP=""
 PUBLIC_ALGOLIA_SEARCH_TOKEN=""
 ALGOLIA_CRUD_TOKEN=""
+
+FIRESTORE_EMULATOR_HOST=""
