--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
+emulator_data/
 node_modules/
 public/build/
 api/_build/
@@ -10,3 +11,5 @@ coverage/
 .env
 *.log
 yarn.lock
+.yarnrc.yml
+app/styles/*.css
