--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ifal-exames",
 	"description": "Releitura do website de exames do IFAL.",
-	"version": "1.1.2",
+	"version": "1.2.0",
 	"author": "Gepetojj <contato.gepetojj@gmail.com>",
 	"license": "MIT",
 	"private": true,
@@ -16,7 +16,7 @@
 		"build:css": "postcss styles --base styles --dir app/styles --env production",
 		"dev": "concurrently \"yarn dev:css\" \"node -r dotenv/config ./node_modules/@remix-run/dev/cli.js\"",
 		"dev:css": "postcss styles --base styles --dir app/styles --w",
-		"dev:db": "json-server --watch dev-db.json --port 3001",
+		"emulators": "firebase emulators:start --import=./emulator_data --export-on-exit",
 		"lint": "eslint . --fix",
 		"format": "prettier . --write",
 		"test:cy": "cypress run",
@@ -24,24 +24,26 @@
 	},
 	"sideEffects": false,
 	"dependencies": {
-		"@remix-run/react": "^1.3.3",
-		"@remix-run/serve": "^1.3.3",
-		"@remix-run/vercel": "^1.3.3",
+		"@headlessui/react": "^1.5.0",
+		"@remix-run/react": "^1.3.4",
+		"@remix-run/serve": "^1.3.4",
+		"@remix-run/vercel": "^1.3.4",
 		"algoliasearch": "^4.13.0",
+		"bcrypt": "^5.0.1",
 		"cleave.js": "^1.6.0",
 		"crypto-js": "^4.1.1",
+		"firebase-admin": "^10.0.2",
 		"fuse.js": "^6.5.3",
 		"i18next": "^21.6.14",
 		"i18next-browser-languagedetector": "^6.1.4",
-		"m3o": "^1.0.1517",
 		"nprogress": "^0.2.0",
 		"qs": "^6.10.3",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
 		"react-i18next": "^11.16.2",
 		"react-icons": "^4.3.1",
-		"react-instantsearch-dom": "^6.23.0",
-		"remix": "^1.3.3",
+		"react-instantsearch-dom": "^6.23.1",
+		"remix": "^1.3.4",
 		"remix-auth": "^3.2.1",
 		"remix-auth-form": "^1.1.1",
 		"remix-i18next": "^3.0.0",
@@ -51,8 +53,9 @@
 		"webfontloader": "^1.6.28"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "^1.3.3",
+		"@remix-run/dev": "^1.3.4",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
+		"@types/bcrypt": "^5",
 		"@types/cleave.js": "^1.4.6",
 		"@types/crypto-js": "^4.1.1",
 		"@types/nprogress": "^0.2.0",
