--- a/package.json
+++ b/package.json
@@ -25,24 +25,25 @@
 	"sideEffects": false,
 	"dependencies": {
 		"@headlessui/react": "^1.5.0",
-		"@remix-run/react": "^1.3.5",
-		"@remix-run/serve": "^1.3.5",
-		"@remix-run/vercel": "^1.3.5",
+		"@remix-run/react": "1.3.4",
+		"@remix-run/serve": "1.3.4",
+		"@remix-run/vercel": "1.3.4",
 		"algoliasearch": "^4.13.0",
 		"bcrypt": "^5.0.1",
 		"cleave.js": "^1.6.0",
 		"crypto-js": "^4.1.1",
 		"firebase-admin": "^10.0.2",
 		"fuse.js": "^6.5.3",
-		"i18next": "^21.6.14",
+		"i18next": "^21.6.15",
 		"i18next-browser-languagedetector": "^6.1.4",
 		"nprogress": "^0.2.0",
 		"qs": "^6.10.3",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"react-i18next": "^11.16.2",
+		"react-i18next": "^11.16.4",
 		"react-icons": "^4.3.1",
 		"react-instantsearch-dom": "^6.23.3",
+		"react-pdf": "^5.7.2",
 		"remix": "^1.3.5",
 		"remix-auth": "^3.2.1",
 		"remix-auth-form": "^1.1.1",
@@ -63,6 +64,7 @@
 		"@types/react": "^17.0.43",
 		"@types/react-dom": "^17.0.14",
 		"@types/react-instantsearch-dom": "^6.12.2",
+		"@types/react-pdf": "^5",
 		"@types/uuid": "^8.3.4",
 		"@types/validator": "^13.7.2",
 		"@types/webfontloader": "^1.6.34",
