--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ifal-exames",
 	"description": "Releitura do website de exames do IFAL.",
-	"version": "1.3.2",
+	"version": "1.3.3",
 	"author": "Gepetojj <contato.gepetojj@gmail.com>",
 	"license": "MIT",
 	"private": true,
@@ -25,9 +25,9 @@
 	"sideEffects": false,
 	"dependencies": {
 		"@headlessui/react": "^1.5.0",
-		"@remix-run/react": "1.3.4",
-		"@remix-run/serve": "1.3.4",
-		"@remix-run/vercel": "1.3.4",
+		"@remix-run/react": "1.3.3",
+		"@remix-run/serve": "1.3.3",
+		"@remix-run/vercel": "1.3.3",
 		"algoliasearch": "^4.13.0",
 		"bcrypt": "^5.0.1",
 		"cleave.js": "^1.6.0",
@@ -44,7 +44,7 @@
 		"react-icons": "^4.3.1",
 		"react-instantsearch-dom": "^6.23.3",
 		"react-pdf": "^5.7.2",
-		"remix": "^1.3.5",
+		"remix": "1.3.3",
 		"remix-auth": "^3.2.1",
 		"remix-auth-form": "^1.1.1",
 		"remix-i18next": "^3.0.0",
@@ -54,7 +54,7 @@
 		"webfontloader": "^1.6.28"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "^1.3.4",
+		"@remix-run/dev": "1.3.3",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
 		"@types/bcrypt": "^5",
 		"@types/cleave.js": "^1.4.6",
